--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ button:hover {
 }
 
 #home {
-  background-image: url(./assets/img/C4BC5075-D649-4502-97F1-0AD749211C89_1_201_a.jpeg);
+  background-image: url("./assets/img/C4BC5075-D649-4502-97F1-0AD749211C89_1_201_a.jpeg");
   width: 100%;
   height: 100vh;
   background-size: cover;
