--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,3 +119,15 @@ button:hover {
   color: #18db0b;
 }
 
+.product {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+
+.product img {
+  transition: 0.3s all;
+}
+
+.product:hover img {
+  opacity: 0.7;
+}
