--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,3 +238,21 @@ footer .copyright img {
   flex-basis: 24%;
   cursor:  pointer;
 }
+
+.single-product input {
+  width: 50px;
+  height: 40px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.single-product input:focus {
+  outline: none; 
+}
+
+.single-product .buy-btn {
+  background-color: black;
+  opacity: 1;
+  transition: 0.4s all;
+}
